--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,10 @@
-jest:
-  data:
-    elasticsearch:
-      # es集群节点  http://localhost:9200
-      urls:
-        - 'http://localhost:9200'
-      # 设置连接es的用户名和密码
-      account:
-        username: elastic
-        password: 123456
+#data:
+#  elasticsearch:
+#    jest:
+#      # es集群节点  http://localhost:9200
+#      urls:
+#        - 'http://localhost:9200'
+#      # 设置连接es的用户名和密码
+#      account:
+#        username: elastic
+#        password: 123456
